SigmaCodebackup3rdSep/objects/Manufacturing_Run_QC__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>QC Failed Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Produced_Qty__c</fullName>
        <formula>(Passed_Qty__c + Failed_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Produced Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Run QCs</relationshipLabel>
        <relationshipName>Manufacturing_Run_QCs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Passed_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>QC Passed Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manufacturing Run QCs</relationshipLabel>
        <relationshipName>Manufacturing_Run_QCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QC_Pass_Percentage__c</fullName>
        <formula>(Passed_Qty__c)/(Passed_Qty__c + Failed_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Pass Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Manufacturing Run QC</label>
    <nameField>
        <displayFormat>MRQC-{0000}</displayFormat>
        <label>Manufacturing Run QC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run QCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>